--- a/source/sass/components/features.scss
+++ b/source/sass/components/features.scss
@@ -6,26 +6,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  line-height: 28px;
+  padding-left: 1px;
 
   &--one {
     margin-bottom: 20px;
     display: block;
   }
 
-@media (min-width: $tablet-width) {
-  font-size: 40px;
-  line-height: 30px;
-}
+  @media (min-width: $tablet-width) {
+    font-size: 40px;
+    line-height: 30px;
+  }
 
-@media (min-width: $desktop-width) {
-  font-size: 50px;
-  line-height: 40px;
-}
+  @media (min-width: $desktop-width) {
+    font-size: 50px;
+    line-height: 40px;
+  }
 }
 
 .features__slogan--two {
   display: block;
-  padding-top: 10px;
+  padding-top: 30px;
 
   @media (min-width: $tablet-width) {
     width: 340px;
@@ -48,6 +50,7 @@
   margin-left: auto;
   margin-right: auto;
   box-sizing: border-box;
+  padding-top: 22px;
 
   @media (min-width: $tablet-width) {
     padding-bottom: 100px;
@@ -59,9 +62,20 @@
   }
 }
 
+.features__bg-triangle {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.features__header {
+  margin-bottom: 38px;
+}
+
 .features__wrapper {
   background-color: $dark-white;
   padding-top: 55px;
+  position: relative;
 }
 
 .features__name {
@@ -69,6 +83,7 @@
   font-size: 18px;
   line-height: 24px;
   margin: 0;
+  margin-bottom: 11px;
 
   @media (min-width: $desktop-width) {
     font-size: 30px;
@@ -81,6 +96,7 @@
   width: 281px;
   padding-left: 10px;
   padding-right: 10px;
+  margin: 0;
 
   @media (min-width: $desktop-width) {
     font-size: 18px;
@@ -104,15 +120,23 @@
   }
 }
 
+.features__item--change {
+  margin-top: 32px;
+}
+
+.features__item--friends {
+  margin-top: 32px;
+}
 
 .features__item--friends::after {
   content: "";
   display: block;
-  height: 330px;
+  height: 319px;
   width: 150px;
   background-image: url("../img/iphone-screen-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: center;
+  background-position-y: 41px;
 
   @media (min-width: $tablet-width) {
     content: "";
