--- a/source/sass/components/page-header.scss
+++ b/source/sass/components/page-header.scss
@@ -10,6 +10,10 @@
     background-color: $dark-blue;
   }
 
+  &--open {
+    background-color: $dark-blue;
+  }
+
   @media (min-width: $desktop-width) {
     position: absolute;
     top: 0;
@@ -32,7 +36,7 @@
 }
 
 .page-header__logo {
-  padding: 0 0 10px;
+  padding: 0 0 22px;
   display: inline-block;
 }
 
