--- a/source/sass/components/section.scss
+++ b/source/sass/components/section.scss
@@ -52,11 +52,13 @@
   margin: 0;
   font-size: 24px;
   font-weight: 300;
+  line-height: 27px;
   color: $white;
   padding: 10px;
   text-align: center;
   width: 100%;
-  padding-bottom: 40px;
+  padding-top: 99px;
+  padding-bottom: 85px;
 
   @media (min-width: $tablet-width) {
     padding-top: 110px;
@@ -68,6 +70,10 @@
     width: 760px;
     margin: 44px auto 60px;
   }
+}
+
+.page-main__features {
+  padding-top: 18px;
 }
 
 .page-main__analysis {
