--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,3 +23,5 @@
 @import "components/submit-poppup.scss";
 @import "components/logo-icon.scss";
 @import "components/footer-logo.scss";
+@import "components/toggle.scss";
+@import "components/map.scss";
