--- a/source/sass/components/contacts.scss
+++ b/source/sass/components/contacts.scss
@@ -15,7 +15,7 @@
 
 .contacts__header {
   margin: 0 0 30px;
-  line-height: 34px;
+  line-height: 30px;
   font-size: 24px;
   font-weight: 300;
 
@@ -45,6 +45,8 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  padding-top: 4px;
+  padding-left: 18px;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -63,11 +65,11 @@
   color: $light-red;
   font-size: 24px;
   font-weight: 300;
-  line-height: 36px;
+  line-height: 26px;
 }
 
 .contacts__item {
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   box-sizing: border-box;
   margin-right: 20px;
 
@@ -77,7 +79,22 @@
 }
 
 .contacts__item--email {
+  padding-left: 4px;
+
   @media (min-width: $desktop-width) {
     order: 1;
   }
+}
+
+.contacts__info--number {
+  padding-left: 3px;
+}
+
+.contacts__title--email {
+  margin-bottom: 2px;
+}
+
+.contacts__info--address {
+  margin-top: 5px;
+  margin-left: 3px;
 }
