--- a/source/sass/components/page-footer.scss
+++ b/source/sass/components/page-footer.scss
@@ -1,11 +1,12 @@
 .page-footer {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
+  display: none;
 
   @media (min-width: $tablet-width) {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
     flex-direction: row;
     justify-content: space-between;
   }
