--- a/source/sass/components/site-list.scss
+++ b/source/sass/components/site-list.scss
@@ -22,8 +22,8 @@
   border-top: 1px solid $black;
   border-bottom: 1px solid $light-blue;
   display: block;
-  padding: 12px 21px;
-  padding-bottom: 13px;
+  padding: 15px 20px 15px;
+  letter-spacing: 1px;
 
   @media (min-width: $desktop-width) {
     border: none;
