--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -66,6 +66,10 @@
   height: 4px;
   background-color: $white;
   box-shadow: 0 10px 0 0 $white, 0 20px 0 0 $white;
+
+  @media (min-width: $tablet-width) {
+    top: 19px;
+  }
 }
 
 
