--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -57,9 +57,9 @@ input[type="radio"].visually-hidden {
   line-height: 18px;
   font-weight: 700;
   margin: 0 auto 15px;
-  padding: 10px;
   border-radius: 30px;
   text-decoration: none;
+  padding: 15px 86px 16px;
 }
 
 .button-form {
