--- a/source/sass/components/page-footer.scss
+++ b/source/sass/components/page-footer.scss
@@ -1,8 +1,9 @@
 .page-footer {
-  display: none;
+  text-align: center;
+  padding-top: 40px;
 
   @media (min-width: $tablet-width) {
-    padding: 10px;
+    margin-top: 28px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,14 +18,38 @@
   }
 }
 
+.page-footer--index {
+  display: none;
+}
+
+.page-footer__logo-link {
+  @media (min-width: $tablet-width) {
+    padding-top: 5px;
+  }
+}
+
 .page-footer__developers {
   display: flex;
   justify-content: center;
-  align-items: center;
+  margin-top: 28px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 21px;
+    margin-right: -7px;
+  }
 }
 
 .page-footer__logo-developers {
   fill: $light-pink;
-  width: 27px;
-  padding-top: 10px;
+  padding-top: 8px;
+  width: 42;
+  height: 49;
+  width: 42px;
+  padding-left: 6px;
+}
+
+.page-footer__name {
+  box-sizing: border-box;
+  padding-left: 5px;
+  padding-top: 1px;
 }
