--- a/source/sass/components/photo.scss
+++ b/source/sass/components/photo.scss
@@ -24,8 +24,8 @@
 
 .photo__wrapper {
   background-color: $dark-white;
-  padding-top: 18px;
-  padding-left: 18px;
+  padding-top: 17px;
+  padding-left: 17px;
   padding-right: 18px;
   width: 280px;
   box-sizing: border-box;
@@ -59,7 +59,16 @@
   padding: 0;
   margin: 0;
   text-transform: uppercase;
-  padding-left: 3px;
+  padding-left: 4px;
+  padding-top: 1px;
+
+  &--sergey {
+    padding-left: 5px;
+  }
+
+  &--nadya {
+    padding-left: 5px;
+  }
 }
 
 .photo__username-wrapper {
@@ -70,6 +79,7 @@
 .photo__comment {
   padding: 0;
   margin: 0 0 36px;
+  margin-bottom: 8px;
 }
 
 .photo__like {
@@ -78,7 +88,7 @@
   color: $light-red;
   text-transform: uppercase;
   font-size: 12px;
-  padding-left: 12px;
+  padding-left: 13px;
 
   @media (min-width: $tablet-width) {
     margin-right: auto;
@@ -96,18 +106,27 @@
   flex-direction: row;
   margin-top: auto;
   align-items: center;
-  padding-top: 8px;
+  margin-bottom: 22px;
 
   @media (min-width: $tablet-width) {
     flex-direction: row-reverse;
     justify-content: space-between;
+  }
+
+  &--sergey {
+    margin-top: 10px;
+  }
+
+  &--nadya {
+    margin-top: 10px;
   }
 }
 
 .photo__like-button {
   background: 0 0;
   border: 0;
-  padding-left: 0;
+  padding-left: 1px;
+  padding-top: 4px;
 
   @media (min-width: $tablet-width) {
     margin-left: auto;
