--- a/source/sass/components/section.scss
+++ b/source/sass/components/section.scss
@@ -28,7 +28,7 @@
 (min-width: 320px) and (min-resolution: 1.5dppx) {
   .page-main__info {
     background-image: url("../img/bg-back-mobile@2x.jpg");
-    background-size: auto 460px;
+    background-size: auto 463px;
   }
 }
 
@@ -52,16 +52,18 @@
   margin: 0;
   font-size: 24px;
   font-weight: 300;
-  line-height: 27px;
-  color: $white;
+  line-height: 28px;
+  color: #ffffff;
   padding: 10px;
   text-align: center;
   width: 100%;
-  padding-top: 99px;
+  padding-top: 98px;
   padding-bottom: 85px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 110px;
+    padding-top: 116px;
+    padding-left: 40px;
+    padding-right: 40px;
     font-size: 50px;
     line-height: 60px;
   }
@@ -69,6 +71,10 @@
   @media (min-width: $desktop-width) {
     width: 760px;
     margin: 44px auto 60px;
+  }
+
+  &--form {
+    padding-bottom: 56px;
   }
 }
 
