--- a/source/sass/components/social-list.scss
+++ b/source/sass/components/social-list.scss
@@ -1,25 +1,37 @@
 .social-list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
   display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-evenly;
-  margin-top: 10px;
+  justify-content: space-between;
+  width: 176px;
+  padding: 0;
+  margin: 0 auto;
+  list-style: none;
+  margin-top: 32px;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 76px;
+    margin-top: 12px;
+    padding-top: 5px;
+  }
 }
 
 .social-list__svg {
   fill: $light-red;
+  margin-left: 17px;
+  box-sizing: border-box;
+
+  &--twitter {
+    margin-left: 14px;
+    margin-top: 2px;
+  }
 }
 
-.social-list__item {
-  padding: 7px;
-  border: 2px solid $light-grey;
+.social-list__link {
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
-  width: 19px;
-  height: 19px;
-  text-align: center;
-  margin-left: 5px;
-  margin-right: 5px;
+  border: 3px solid #e9ebec;
 }
