--- a/source/sass/components/contacts.scss
+++ b/source/sass/components/contacts.scss
@@ -18,14 +18,15 @@
   line-height: 30px;
   font-size: 24px;
   font-weight: 300;
+  padding-top: 1px;
 
   @media (min-width: $tablet-width) {
     font-size: 40px;
     line-height: 48px;
-    padding-left: 96px;
+    padding-left: 57px;
     padding-right: 56px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 5px;
+    margin-bottom: 38px;
   }
 
   @media (min-width: $desktop-width) {
@@ -39,6 +40,12 @@
   line-height: 28px;
   margin: 0;
   padding: 0;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 4px;
+    margin-top: 2px;
+    padding-right: 23px;
+  }
 }
 
 .contacts__list {
@@ -53,6 +60,8 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    padding-left: 8px;
+    padding-top: 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -66,6 +75,11 @@
   font-size: 24px;
   font-weight: 300;
   line-height: 26px;
+
+  @media (min-width: $tablet-width) {
+    line-height: 27px;
+    padding-left: 3px;
+  }
 }
 
 .contacts__item {
@@ -74,7 +88,9 @@
   margin-right: 20px;
 
   @media (min-width: $tablet-width) {
-    width: 46%;
+    width: 50%;
+    margin-right: 0;
+    margin-bottom: 36px;
   }
 }
 
@@ -88,13 +104,51 @@
 
 .contacts__info--number {
   padding-left: 3px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 25px;
+  }
+}
+
+.contest__info--email {
+  padding-left: 2px;
 }
 
 .contacts__title--email {
-  margin-bottom: 2px;
+  margin-bottom: 3px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 6px;
+    margin-top: 3px;
+    margin-left: 25px;
+  }
+}
+
+.contacts__title--number {
+  @media (mix-widt: $tablet-width) {
+    padding-right: 24px;
+  }
 }
 
 .contacts__info--address {
   margin-top: 5px;
   margin-left: 3px;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 9px;
+    padding-right: 20px;
+  }
+}
+
+.contacts__title--address {
+  @media (min-width: $tablet-width) {
+    padding-right: 7px;
+  }
+}
+
+.contacts__item--address {
+  @media(min-width: $tablet-width) {
+    margin: 0 auto 30px;
+    padding-top: 5px;
+  }
 }
