--- a/source/sass/components/comment.scss
+++ b/source/sass/components/comment.scss
@@ -47,6 +47,7 @@
   @media (min-width: $tablet-width) {
     width: 105%;
     font-size: 18px;
+    padding-top: 14px;
   }
 
   @media (min-width: $desktop-width) {
@@ -58,16 +59,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 19px;
+  margin: 0;
 
   @media (min-width: $tablet-width) {
     flex-direction: column-reverse;
+    padding-top: 19px;
   }
 }
 
 .comment {
   position: relative;
-  padding-bottom: 76px;
+  padding-bottom: 89px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 63px;
+    padding-bottom: 67px;
+  }
 }
 
 .comment-slider__wrapper {
@@ -75,6 +82,20 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 84%;
+  top: 85%;
   left: 38%;
+
+  @media (min-width: $tablet-width) {
+    top: 91%;
+    left: 44%;
+  }
+}
+
+.comment__wrapper {
+  padding-top: 34px;
+  box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 37px;
+  }
 }
