--- a/source/sass/components/page-header.scss
+++ b/source/sass/components/page-header.scss
@@ -48,7 +48,7 @@
     padding-left: 72px;
   }
 
-  @media (min-width:  $tablet-width) {
+  @media (min-width:  $desktop-width) {
     padding-top: 21px;
     padding-left: 181px;
 
