--- a/source/sass/components/contacts.scss
+++ b/source/sass/components/contacts.scss
@@ -10,15 +10,17 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    padding: 0;
+    padding-top: 40px;
   }
 }
 
 .contacts__header {
-  margin: 0 0 30px;
   line-height: 30px;
   font-size: 24px;
   font-weight: 300;
-  padding-top: 1px;
+  margin: 0;
+  padding-bottom: 20px;
 
   @media (min-width: $tablet-width) {
     font-size: 40px;
@@ -26,7 +28,7 @@
     padding-left: 57px;
     padding-right: 56px;
     margin-top: 5px;
-    margin-bottom: 38px;
+    margin-bottom: 23px;
   }
 
   @media (min-width: $desktop-width) {
@@ -42,9 +44,7 @@
   padding: 0;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 4px;
-    margin-top: 2px;
-    padding-right: 23px;
+    margin-bottom: 3px;
   }
 }
 
@@ -52,16 +52,15 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  padding-top: 4px;
-  padding-left: 18px;
+  padding: 0 0 34px;
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    padding-left: 8px;
     padding-top: 0;
+    width: 97%;
   }
 
   @media (min-width: $desktop-width) {
@@ -74,81 +73,39 @@
   color: $light-red;
   font-size: 24px;
   font-weight: 300;
-  line-height: 26px;
+  line-height: 32px;
 
   @media (min-width: $tablet-width) {
     line-height: 27px;
-    padding-left: 3px;
   }
 }
 
 .contacts__item {
-  margin-bottom: 20px;
   box-sizing: border-box;
-  margin-right: 20px;
+  padding: 12px 20px 8px;
+  padding-top: 9px;
+  padding-bottom: 8px;
+  padding-left: 22px;
 
   @media (min-width: $tablet-width) {
     width: 50%;
     margin-right: 0;
-    margin-bottom: 36px;
-  }
-}
-
-.contacts__item--email {
-  padding-left: 4px;
-
-  @media (min-width: $desktop-width) {
-    order: 1;
-  }
-}
-
-.contacts__info--number {
-  padding-left: 3px;
-
-  @media (min-width: $tablet-width) {
-    padding-right: 25px;
-  }
-}
-
-.contest__info--email {
-  padding-left: 2px;
-}
-
-.contacts__title--email {
-  margin-bottom: 3px;
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 6px;
-    margin-top: 3px;
-    margin-left: 25px;
-  }
-}
-
-.contacts__title--number {
-  @media (mix-widt: $tablet-width) {
-    padding-right: 24px;
+    margin-bottom: 43px;
+    padding: 0;
   }
 }
 
 .contacts__info--address {
-  margin-top: 5px;
-  margin-left: 3px;
 
   @media (min-width: $tablet-width) {
-    padding-left: 9px;
-    padding-right: 20px;
-  }
-}
-
-.contacts__title--address {
-  @media (min-width: $tablet-width) {
-    padding-right: 7px;
+    padding-left: 40px;
+    padding-right: 39px;
+    padding-top: 3px;
   }
 }
 
 .contacts__item--address {
-  @media(min-width: $tablet-width) {
-    margin: 0 auto 30px;
-    padding-top: 5px;
+  @media (min-width: $tablet-width) {
+    margin-bottom: -3px;
   }
 }
