--- a/source/sass/components/map.scss
+++ b/source/sass/components/map.scss
@@ -9,9 +9,42 @@
   position: relative;
   height: 200px;
   overflow: hidden;
+
+  @media (min-width: $tablet-width) {
+    height: 373px;
+  }
 }
 
 .map__picture {
   width: 100%;
-  object-position: 0 -400px;
+}
+
+.map__img {
+  display: block;
+  margin: 0 auto;
+  object-position: 0 -445px;
+}
+
+.map__img::before {
+  border: 4px solid #b5b5b5;
+  border-radius: 50%;
+  content: "";
+  height: 16px;
+  left: -36px;
+  position: absolute;
+  top: -4px;
+  width: 16px;
+  opacity: .6;
+}
+
+.map__img::after {
+  background-color: #b5b5b5;
+  border-radius: 50%;
+  content: "";
+  height: 9px;
+  position: absolute;
+  top: 4px;
+  left: -28px;
+  width: 9px;
+  opacity: .6;
 }
