--- a/source/sass/components/page-footer.scss
+++ b/source/sass/components/page-footer.scss
@@ -10,6 +10,8 @@
     box-sizing: border-box;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 0;
+    padding-top: 18px;
   }
 
   @media (min-width: $desktop-width) {
