--- a/source/sass/components/page-intro.scss
+++ b/source/sass/components/page-intro.scss
@@ -1,8 +1,8 @@
 .page-intro {
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-size: 100% auto;
   background-position: top center;
   background-repeat: no-repeat;
+  background-size: cover;
 
 
   @media (min-width: $tablet-width) {
@@ -46,6 +46,7 @@
 .page-intro__wrapper-picture-and-button {
   width: 100%;
   margin-top: 176px;
+  box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -62,6 +63,7 @@
   @media (min-width: $tablet-width) {
     margin-left: -340px;
     padding-right: 0;
+    margin-right: -20px;
   }
 }
 
@@ -130,7 +132,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 17px;
+  padding-top: 17px;
 
   @media (min-width: $tablet-width) {
     background-color: transparent;
